<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_course_activity"
        android:title="@string/add_course"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/calculator_activity"
        android:title="@string/grade_calc"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/about_activity"
        android:title="@string/about"
        android:orderInCategory="100"
        android:showAsAction="never" />


    <item
        android:id="@+id/main_activity"
        android:title="@string/home"
        android:orderInCategory="100"
        android:showAsAction="never" />


</menu>