<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".AddCourseActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/enter_course"
            android:textAppearance="@android:style/TextAppearance.Large"/>
    </LinearLayout>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edt_course"
        android:hint="@string/hint_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_room"
        android:hint="@string/hint_room_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_day"
        android:hint="@string/hint_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_time"
        android:hint="@string/hint_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:text="@string/capital_add_course"
        android:id="@+id/btn_add_course"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="115dp"
        android:padding="20dp"
        android:layout_height="wrap_content" />




</LinearLayout>