<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="175dp"
        android:text="@string/about_label"
        android:textColor="@color/mediumBlue"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <LinearLayout
        android:background="#66B2FF"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="100dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/dev_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="#FFFFFF"/>
        <TextView
            android:text="@string/version_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="#FFFFFF"/>
        <TextView
            android:text="@string/summary_label"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#FFFFFF"/>
        <TextView
            android:text="@string/summary_text"
            android:textAlignment="center"
            android:lineSpacingMultiplier="1.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="#FFFFFF"/>

    </LinearLayout>



</LinearLayout>